<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">railway</string>
    <string name="history">历史数据</string>
    <string name="measure_mode">采集模式</string>
    <string name="sensor_scope">传感器量程(mm)</string>
    <string name="sensor_voltage_min">传感器电压下限</string>
    <string name="sensor_voltage_max">传感器电压上限</string>
    <string name="sensor_distance_voltage">毫米电压(v/mm)</string>
    <string name="sensor_velocity">移动速度(m/s)</string>
    <string name="measure_distance">测量长度 (m) </string>
    <string name="measure_scan">扫描模式</string>
    <string name="measure_interupt">中断模式</string>
    <string name="measure_basecount">时间偏移点数</string>
    <string name="measure_maxscope">显示上限(mm)</string>
    <string name="measure_minscope">显示下限(mm)</string>
    <string name="measure_maxvalue">传感器量程(mm)</string>
</resources>
