<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal"
    android:background="@color/gray"
    android:orientation="vertical">


    <ScrollView
        android:id="@+id/scrolllist"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:orientation="vertical"
        android:scrollbars="vertical">

        <LinearLayout
            android:id="@+id/forwrapcontent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/linearLayoutMaxScope1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/measure_maxvalue"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="left"
                    android:gravity="center"
                    android:text="@string/sensor_scope"
                    android:textColor="@color/blue" />

                <EditText
                    android:id="@+id/sensor_scope"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_horizontal"
                    android:inputType="numberDecimal" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_sensor_voltage_min"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:baselineAligned="false"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/sensor_voltage_min_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="left"
                    android:gravity="center"
                    android:text="@string/sensor_voltage_min"
                    android:textColor="@color/blue" />

                <EditText
                    android:id="@+id/sensor_voltage_min"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal|numberSigned" />
            </LinearLayout>


            <LinearLayout
                android:id="@+id/ll_sensor_voltage_max"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:baselineAligned="false"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/sensor_voltage_max_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="left"
                    android:gravity="center"
                    android:text="@string/sensor_voltage_max"
                    android:textColor="@color/blue" />

                <EditText
                    android:id="@+id/sensor_voltage_max"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayoutSensorVelocity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:baselineAligned="false"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/sensor_velocity_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="left"
                    android:gravity="center"
                    android:text="@string/sensor_velocity"
                    android:textColor="@color/blue" />

                <EditText
                    android:id="@+id/sensor_velocity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayoutDistance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:baselineAligned="false"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/measure_distance_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="left"
                    android:gravity="center"
                    android:paddingRight="20dp"
                    android:text="@string/measure_distance"
                    android:textColor="@color/blue" />

                <EditText
                    android:id="@+id/measure_distance"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayoutMaxScope2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:baselineAligned="false"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/measure_maxscope"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="left"
                    android:gravity="center"
                    android:text="@string/measure_maxscope"
                    android:textColor="@color/blue" />

                <EditText
                    android:id="@+id/max_scope"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayoutMinScope3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:baselineAligned="false"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/measure_minscope"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="left"
                    android:gravity="center"
                    android:text="@string/measure_minscope"
                    android:textColor="@color/blue" />

                <EditText
                    android:id="@+id/min_scope"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal|numberSigned" />
            </LinearLayout>


            <Button
                android:id="@+id/setting_save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:paddingLeft="40dp"
                android:paddingRight="40dp"
                android:text="保存"
                android:textColor="@color/blue"
                android:textSize="16dp" />

        </LinearLayout>
    </ScrollView>
</FrameLayout>